--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* keyboard.c (read_char, requeued_events_pending_p, Finput_pending_p)
+	(Fdiscard_input, quit_throw_to_read_char, init_keyboard)
+	(syms_of_keyboard): Remove support for unread-command-char.
+
 2012-09-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32proc.c (sys_kill): If PID is our process ID and the signal is
