--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,14 @@
+2012-09-12  Juri Linkov  <juri@jurta.org>
+
+	* info.el (Info-search): Don't check for isearch-mode and
+	isearch-regexp before let-binding search-spaces-regexp to
+	Info-search-whitespace-regexp.
+	(Info-isearch-search): Let-bind Info-search-whitespace-regexp to
+	search-whitespace-regexp if isearch-lax-whitespace or
+	isearch-regexp-lax-whitespace is non-nil.
+	(Info-mode): Don't set local variable search-whitespace-regexp.
+	http://lists.gnu.org/archive/html/emacs-devel/2012-08/msg00811.html
+
 2012-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/debug.el (debugger-outer-unread-command-char, debug)
