Function to mark objects and remove killed buffers at once. * alloc.c (discard_killed_buffers): Rename to ... (mark_discard_killed buffers) ... new name.  Add marking of remaining objects.  Fix comment.  Adjust users. (mark_object): Do not touch frame buffer lists here. * frame.c (delete_frame): Reset frame buffer lists here.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-09-13  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Function to mark objects and remove killed buffers at once.
+	* alloc.c (discard_killed_buffers): Rename to ...
+	(mark_discard_killed buffers) ... new name.  Add marking
+	of remaining objects.  Fix comment.  Adjust users.
+	(mark_object): Do not touch frame buffer lists here.
+	* frame.c (delete_frame): Reset frame buffer lists here.
+
 2012-09-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Better workaround for GNOME bug when --enable-gcc-warnings.
