--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-13  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* texinfo.tex: Merge from gnulib.
+
 2012-09-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	Sync with Tramp 2.2.6.
