--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-09-13  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Use a more backwards-compatible timer format (Bug#12430).
+	* keyboard.c (decode_timer): Get PSECS from the 8th (origin-0)
+	vector element, not from the 4th, since PSECS is now at the end.
+	(Fcurrent_idle_time): Doc fix.
+
 2012-09-13  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Function to mark objects and remove killed buffers at once.
