--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-13  Juri Linkov  <juri@jurta.org>
+
+	* dired-aux.el (dired-do-chxxx): Use `eq' to detect empty input.
+	(Bug#12399)
+
 2012-09-13  Glenn Morris  <rgm@gnu.org>
 
 	* calc/calc.el (math-compose-expr):
