--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-14  Martin Rudalics  <rudalics@gmx.at>
+
+	* xdisp.c (Fformat_mode_line): Unconditionally save/restore
+	current buffer (Bug#12387).
+
 2012-09-14  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/alloc.$(O)): Update dependencies.
