--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-09-14  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Avoid out-of-range marker position (Bug#12426).
+	* insdel.c (replace_range, replace_range_2): Adjust
+	markers before overlays, as suggested by comments.
+	(insert_1_both, insert_from_buffer_1, adjust_after_replace):
+	Remove redundant check before calling offset_intervals.
+
 2012-09-14  Martin Rudalics  <rudalics@gmx.at>
 
 	* xdisp.c (Fformat_mode_line): Unconditionally save/restore
