Fix glitches with 'configure --without-sync-input'.
* configure.ac (--without-sync-input): Fix typo in usage message.
* alloc.c [!SYSTEM_MALLOC && !SYNC_INPUT && HAVE_PTHREAD]:
Include "syssignal.h", for 'main_thread'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-09-14  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* configure.ac (--without-sync-input): Fix typo in usage message.
+
 	* configure.ac: Port to hosts lacking gtk.
 	(PKG_CHECK_MODULES): Capture pkg-config diagnostics
 	better, in particular, problems in invoking pkg-config itself.
