font.c (Ffont_shape_gstring): Don't adjust grapheme cluster here, but just check the validity of glyphs in the glyph-string.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-15  Kenichi Handa  <handa@gnu.org>
+
+	* font.c (Ffont_shape_gstring): Don't adjust grapheme cluster
+	here, but just check the validity of glyphs in the glyph-string.
+
 2012-09-14  Martin Rudalics  <rudalics@gmx.at>
 
 	* xdisp.c (Fformat_mode_line): Unconditionally save/restore
